MDEV-19918 Server hangs or crashes while trying to lock mutex when the mutex was already locked upon startup with server_audit and orphan records in mysql.plugin.

Use lock_plugin_ownter variable to check if the mutex was locked
already.